# euleraph

./: .clang-format  CMakeLists.txt  README.md  vcpkg.json
cmake/: ProjectOptions.cmake
docs/: README.md
docs/api/: 01_api_spec.md
docs/data/: 01_data_dictionary.md
docs/design/: 01_design_lite.md
docs/release/: 01_release_runbook.md
docs/requirements/: 01_prd_lite.md
docs/test/: 01_test_checklist.md
release/: run.sh
release/lib/: libwiredtiger.so.11.3.1
src/: main.cpp
src/algo/: algo_Implementation.cpp  algo_Implementation.hpp  k_hop_neighbors_count.cpp  k_hop_neighbors_count.hpp
src/importer/: csv_external_sort.cpp  csv_external_sort.hpp  importer.cpp  importer.hpp
src/interface/algo/: algo.hpp
src/interface/storage/: reader.hpp  writer.hpp
src/interface/types/: types.hpp
src/log/: log.hpp
src/service/http/: euleraph_http_handle.cpp  euleraph_http_handle.hpp
src/storage/: one_trx_reader_wiredtiger.cpp  one_trx_reader_wiredtiger.hpp  reader_wiredtiger.cpp  reader_wiredtiger.hpp  wiredtiger_common.cpp  wiredtiger_common.hpp  writer_wiredtiger.cpp  writer_wiredtiger.hpp
src/utils/: defer.hpp  gaudy.hpp  gdm_array.h  thread_pool.hpp  wait_group.hpp
test/: CMakeLists.txt  test_wiredtiger_impl.cpp
test/data/: sample_data.xlsx
test_data/: 对比记录.txt
tools/: elf.sh  generate_test_data.py  generate_test_data_csv.py
